Refactor PeerInfo and update DHT peer requests - Adjust PeerInfo for real-world scenarios - Refactor Json utilities for maintainability - Align DHT announce and lookup requests with PeerInfo changes